--- a/wiki/Settings.wiki
+++ b/wiki/Settings.wiki
@@ -4,6 +4,12 @@
 
 Описание настроек советника "eLT v1.0".
 
+Содержание:
+<<TableOfContents()>>
+= Настройки советника =
+== Настройки базовой (лимитной) сетки ==
+== Настройки добавочного (лимитного) ордера ==
+== Настройки стоповых ордеров ==
 
 = Детали =
 
