--- a/wiki/Settings.wiki
+++ b/wiki/Settings.wiki
@@ -5,11 +5,11 @@
 Описание настроек советника "eLT v1.0".
 
 Содержание:
-<<TableOfContents()>>
-= Настройки советника =
-== Настройки базовой (лимитной) сетки ==
-== Настройки добавочного (лимитного) ордера ==
-== Настройки стоповых ордеров ==
+#sidebar TableOfContents
+* Настройки советника =
+  * Настройки базовой (лимитной) сетки ==
+  * Настройки добавочного (лимитного) ордера ==
+  * Настройки стоповых ордеров ==
 
 = Детали =
 
