--- a/wiki/Settings.wiki
+++ b/wiki/Settings.wiki
@@ -6,10 +6,10 @@
 
 Содержание:
 #sidebar TableOfContents
-* Настройки советника =
-  * Настройки базовой (лимитной) сетки ==
-  * Настройки добавочного (лимитного) ордера ==
-  * Настройки стоповых ордеров ==
+* [Настройки советника] 
+  * [Настройки базовой (лимитной) сетки]
+  * [Настройки добавочного (лимитного) ордера]
+  * [Настройки стоповых ордеров]
 
 = Детали =
 
