--- a/wiki/Settings.wiki
+++ b/wiki/Settings.wiki
@@ -6,7 +6,7 @@
 
 Содержание:
 #sidebar TableOfContents
-* [Настройки советника] 
+* [БазовыеНастройки|Настройки советника] 
   * [Настройки базовой (лимитной) сетки]
   * [Настройки добавочного (лимитного) ордера]
   * [Настройки стоповых ордеров]
@@ -18,6 +18,7 @@ Add your content here.  Format your content with:
   * Headings, paragraphs, and lists
   * Automatic links to other wiki pages
 
+= БазовыеНастройки =  
 ---- input parameters
 
 *extern double TWISE_LOTS* = 20;     // деление ордеров при достижении расчетного значения объема => заданного значения
