--- a/wiki/Settings.wiki
+++ b/wiki/Settings.wiki
@@ -1,6 +1,5 @@
 ﻿#summary One-sentence summary of this page.
-Содержание:
-#sidebar TableOfContents
+#sidebar Содержание:
 * [БазовыеНастройки|Настройки советника] 
   * [Настройки базовой (лимитной) сетки]
   * [Настройки добавочного (лимитного) ордера]
