--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -1,9 +1,6 @@
-#summary One-sentence summary of this page.
 #labels Settings
-#sidebar Содержание:
-* Базовые настройки
-  *[Настройки лимитной сетки#Настройки_лимитной_сетки]
-
 = Базовые настройки =
+
+TWICE_LOT - Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
 
 == Настройки лимитной сетки ==
