Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -1,6 +1,10 @@
 #labels Settings
-= Базовые настройки =
-
-TWICE_LOT - Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
-
-== Настройки лимитной сетки ==
+ * =Базовые настройки=
+   * *TWICE_LOT* - Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
+   * *MN* - магик с которым будет работать советник. чужие магики обрабатываться не будут 
+   * == Настройки лимитной сетки ==
+     * *mgp_Target* - 
+     * *mgp_TargetPlus* -
+     * *mgp_TP_on_first* - 
+     * *mgp_TP* - 
+     * *mgp_TPPlus* -
