Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -3,22 +3,22 @@
 
 =Базовые настройки=
 
-==TWICE_LOT==
-
+===TWICE_LOT===
 Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
 
-==MN==
-
+===MN===
 магик с которым будет работать советник. чужие магики обрабатываться не будут 
 
 == Настройки лимитной сетки ==
 
 ===mgp_Target===
+Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
  
 ===mgp_TargetPlus===
+увеличение [mgp_Target таргета] в зависимости от уровня на mgp_TargetPlus пунктов
 
 ===mgp_TP_on_first=== 
 
-===mgp_TP===
+===mgp_TP=== 
 
 ===mgp_TPPlus===
