Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -9,17 +9,32 @@
 ===MN===
 магик с которым будет работать советник. чужие магики обрабатываться не будут 
 
-== Настройки лимитной сетки ==
+==Настройки лимитной сетки==
 
-===mgp_Target===
+===Настройки таргета===
+
+==== mgp_Target ====
 Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
  
-==='mgp_TargetPlus'===
+====mgp_TargetPlus====
 
 увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#mgp_Target таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
+-----
+=== Настройки тейкпрофита ===
+====mgp_TP_on_first==== 
+кол. пунктов для выставления тп на родительский ордер, когда нет сработавших дочерних ордеров
 
-===mgp_TP_on_first=== 
+====mgp_TP==== 
+кол. пунктов для выставления тп на сработавшие ордера сетки. расчет от последнего сработавшего ордера
 
-===mgp_TP=== 
+====mgp_TPPlus====
+увеличение тп от уровня на заданное количество пунктов.
+-----
+=== Настройки стоплосса ===
+====mgp_needSLToAll====
+выставлять сл на всю сетку от последнего ордера или отдельно на каждый ордер
 
-===mgp_TPPlus===
+====mgp_SL====
+зависит от mgp_needSLToAll размерность: пункты
+====mgp_SLPlus====
+-----
