Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -4,39 +4,53 @@
 =Базовые настройки=
 
 ===TWICE_LOT===
-Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
+    Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
 
 ===MN===
-магик с которым будет работать советник. чужие магики обрабатываться не будут 
+    магик с которым будет работать советник. чужие магики обрабатываться не будут 
 
 ==Настройки лимитной сетки==
 
 ===Настройки таргета===
 
 ==== mgp_Target ====
-Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
+    Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
  
 ====mgp_TargetPlus====
-
-увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#mgp_Target таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
+    увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#mgp_Target таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
 -----
 === Настройки тейкпрофита ===
 ====mgp_TP_on_first==== 
-кол. пунктов для выставления тп на родительский ордер, когда нет сработавших дочерних ордеров
+    кол. пунктов для выставления тп на родительский ордер, когда нет сработавших дочерних ордеров
 
 ====mgp_TP==== 
-кол. пунктов для выставления тп на сработавшие ордера сетки. расчет от последнего сработавшего ордера
+    кол. пунктов для выставления тп на сработавшие ордера сетки. расчет от последнего сработавшего ордера
 
 ====mgp_TPPlus====
-увеличение тп от уровня на заданное количество пунктов.
+    увеличение тп от уровня на заданное количество пунктов.
 -----
 === Настройки стоплосса ===
 ====mgp_needSLToAll====
-выставлять сл на всю сетку от последнего ордера или отдельно на каждый ордер
+    _*true/false*_ - выставлять сл на всю сетку от последнего ордера или отдельно на каждый ордер
 
 ====mgp_SL====
-зависит от [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302520136&updated=Settings_EA_ALL#mgp_needSLToAll mgp_needSLToAll] размерность: пункты
+    зависит от [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302520136&updated=Settings_EA_ALL#mgp_needSLToAll mgp_needSLToAll] размерность: пункты
 
 ====mgp_SLPlus====
-Увеличение сл в зависимости от уровня текущей сетки
+    Увеличение сл в зависимости от уровня текущей сетки
 -----
+=== Настройка использования лим. сетки ===
+
+====mgp_useLimOrders====
+    _*true/false*_ - разрешает советнику использовать лимитную сетку
+
+====mgp_LimLevels====
+    количество уровней лимитной сетки, включая родительский ордер
+-----
+=== Настройка усреднения ===
+
+====mgp_plusVol====
+    увеличение объема след. уровня на величину mgp_plusVol (+)
+
+====mgp_multiplyVol====
+    увеличение объема след. уровня в mgp_multiplyVol раз   (*)
