--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -50,7 +50,7 @@
 === Настройка усреднения ===
 
 ====mgp_plusVol====
-    увеличение объема след. уровня на величину [mgp_plusVol (+)]
+    увеличение объема след. уровня на величину mgp_plusVol (+)
 
 ====mgp_multiplyVol====
-    увеличение объема след. уровня в [mgp_multiplyVol раз   (*)]
+    увеличение объема след. уровня в mgp_multiplyVol] раз   {{{(*)}}}
