Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -50,7 +50,7 @@
 === Настройка усреднения ===
 
 ====mgp_plusVol====
-    увеличение объема след. уровня на величину mgp_plusVol (+)
+    увеличение объема след. уровня на величину _mgp_plusVol_ (+)
 
 ====mgp_multiplyVol====
-    увеличение объема след. уровня в mgp_multiplyVol] раз   {{{(*)}}}
+    увеличение объема след. уровня в _mgp_multiplyVol_ раз   {{{(*)}}}
