--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -16,7 +16,7 @@
 ==== mgp_Target ====
     Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
  
-====mgp_TargetPlus====
+====mgp_!TargetPlus====
     увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#mgp_Target таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
 -----
 === Настройки тейкпрофита ===
@@ -44,7 +44,7 @@
 ====mgp_useLimOrders====
     _*true/false*_ - разрешает советнику использовать лимитную сетку
 
-====mgp_LimLevels====
+====mgp_!LimLevels====
     количество уровней лимитной сетки, включая родительский ордер
 -----
 === Настройка усреднения ===
@@ -54,3 +54,17 @@
 
 ====mgp_multiplyVol====
     увеличение объема след. уровня в _mgp_multiplyVol_ раз   {{{(*)}}}
+-----
+=== Настройка добавочного ордера ===
+
+====add_useAddLimit====
+    _*true/false*_ - разрешает советнику выставлять добавочный лимитный ордер как родительский
+
+====add_!LimitLevel====
+    уровень сетки, от которого будет произведен расчет цены добавочного ордера
+
+====add_!Limit_Pip====
+    сколько пунктов от уровня будет выставлен добавочный ордер
+
+====add_Limit_useLevelVol====
+    *true/false* - разрешает советнику использовать настройку _add_Limit_multiplyVol_ иначе будет использоваться _add_Limit_fixVol_  
