Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -10,6 +10,7 @@
     магик с которым будет работать советник. чужие магики обрабатываться не будут 
 
 ==Настройки лимитной сетки==
+*M*ain *G*rid *P*roperties - настройки основной сетки
 
 ===Настройки таргета===
 
@@ -56,18 +57,18 @@
     увеличение объема след. уровня в _mgp_multiplyVol_ раз   {{{(*)}}}
 -----
 == Настройка добавочного ордера ==
-
+После срабатывания, добавочный ордер ведет себя как родительский ордер сетки *1-го* уровня 
 ===add_useAddLimit===
     _*true/false*_ - разрешает советнику выставлять добавочный лимитный ордер как родительский
 
-===add_!LimitLevel===
+===add_LimitLevel===
     уровень сетки, от которого будет произведен расчет цены добавочного ордера
 
-===add_!Limit_Pip===
+===add_Limit_Pip===
     сколько пунктов от уровня будет выставлен добавочный ордер
 
 ===add_Limit_useLevelVol===
     _*true/false*_ - разрешает советнику использовать настройку _add_Limit_multiplyVol_ иначе будет использоваться _add_Limit_fixVol_
 
 ====add_Limit_multiplyVol====
-    коэф. умножения объема уровня add_!LimitLevel основной сетки лимитных ордеров
+    коэф. умножения объема уровня add_LimitLevel основной сетки лимитных ордеров
