Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -10,7 +10,8 @@
     магик с которым будет работать советник. чужие магики обрабатываться не будут 
 
 ==Настройки лимитной сетки==
-*M*ain *G*rid *P*roperties - настройки основной сетки
+*M* ain *G* rid *P* roperties - настройки основной сетки
+Основная сетка - это сетка *1-го* уровня. Она (сетка) строится от *родительского ордера* выставленного вручную или открытого советником по одной из встроенных стратегий. Сетки, построенные от *стоповых ордеров* являются *дочерними* и имеют *уровень 2 и >*
 
 ===Настройки таргета===
 
