--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -55,7 +55,7 @@
     увеличение объема след. уровня на величину _mgp_plusVol_ (+)
 
 ====mgp_multiplyVol====
-    увеличение объема след. уровня в _mgp_multiplyVol_ раз   {{{(*)}}}
+    увеличение объема след. уровня в _mgp_multiplyVol_ раз   ('*')
 -----
 == Настройка добавочного ордера ==
 После срабатывания, добавочный ордер ведет себя как родительский ордер сетки *1-го* уровня 
