--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -57,19 +57,49 @@
 ====mgp_multiplyVol====
     увеличение объема след. уровня в _mgp_multiplyVol_ раз   {{{(*)}}}
 -----
-== Настройка добавочного ордера ==
-После срабатывания, добавочный ордер ведет себя как родительский ордер сетки *1-го* уровня 
+
+== Настройка добавочного лимитного ордера ==
+После срабатывания, добавочный лимитный ордер ведет себя как родительский ордер сетки *1-го* уровня 
+_*Соглашение:* сетка для добавочного ордера расчитывается из настроек *настроек лимитной сетки*_ 
+
 ===add_useAddLimit===
     _*true/false*_ - разрешает советнику выставлять добавочный лимитный ордер как родительский
 
-===add_LimitLevel===
+====add_LimitLevel====
     уровень сетки, от которого будет произведен расчет цены добавочного ордера
 
-===add_Limit_Pip===
+====add_Limit_Pip====
     сколько пунктов от уровня будет выставлен добавочный ордер
 
-===add_Limit_useLevelVol===
+====add_Limit_useLevelVol====
     _*true/false*_ - разрешает советнику использовать настройку _add_Limit_multiplyVol_ иначе будет использоваться _add_Limit_fixVol_
 
-====add_Limit_multiplyVol====
+=====add_Limit_multiplyVol=====
     коэф. умножения объема уровня add_LimitLevel основной сетки лимитных ордеров
+  
+=====add_Limit_fixVol=====
+    фиксированный объем добавочного ордера
+-----
+
+== Настройка добавочного стопового ордера ==
+
+После срабатывания, добавочный стоповый ордер ведет себя как родительский ордер сетки *1-го* уровня 
+_*Соглашение:* сетка для добавочного ордера расчитывается из *настроек лимитной сетки*_ 
+
+=== add_useAddStop ===
+    _*true/false*_ - разрешает советнику выставлять добавочный стоповый ордер как родительский
+  
+==== add_StopLevel ====
+    уровень сетки, от которого будет произведен расчет цены добавочного ордера. Родительский ордер находится на 1-м уровне 
+    
+==== add_Stop_Pip ====
+    сколько пунктов от уровня будет выставлен добавочный ордер
+    
+==== add_Stop_useLevelVol ====
+    _*true/false*_ - разрешает советнику использовать настройку _add_Stop_multiplyVol_ иначе будет использоваться _add_Stop_fixVol_
+
+===== add_Stop_multiplyVol =====
+    коэф. умножения объема уровня <add_StopLevel> основной сетки лимитных ордеров
+    
+===== add_Stop_fixVol =====
+    фиксированный объем добавочного ордера             
