--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -3,10 +3,10 @@
 
 =Базовые настройки=
 
-===TWICE_LOT===
+{{{TWICE_LOT}}}
     Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
 
-===MN===
+{{{MN}}}
     магик с которым будет работать советник. чужие магики обрабатываться не будут 
 
 ==Настройки лимитной сетки==
@@ -15,10 +15,10 @@
 
 ===Настройки таргета===
 
-==== mgp_Target ====
+{{{mgp_Target}}}
     Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
  
-====mgp_TargetPlus====
+{{{mgp_TargetPlus}}}
     увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#mgp_Target таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
 -----
 === Настройки тейкпрофита ===
@@ -55,7 +55,7 @@
     увеличение объема след. уровня на величину _mgp_plusVol_ (+)
 
 ====mgp_multiplyVol====
-    увеличение объема след. уровня в _mgp_multiplyVol_ раз   {{{(*)}}}
+    увеличение объема след. уровня в _mgp_multiplyVol_ раз   ('*')
 -----
 
 == Настройка добавочного лимитного ордера ==
