--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -19,42 +19,46 @@
     Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
  
 {{{mgp_TargetPlus}}}
-    увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D1%82%D0%B0%D1%80%D0%B3%D0%B5%D1%82%D0%B0 таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
+    увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#mgp_Target таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
 -----
 === Настройки тейкпрофита ===
-====mgp_TP_on_first==== 
+{{{mgp_TP_on_first}}} 
     кол. пунктов для выставления тп на родительский ордер, когда нет сработавших дочерних ордеров
 
-====mgp_TP==== 
+{{{mgp_TP}}} 
     кол. пунктов для выставления тп на сработавшие ордера сетки. расчет от последнего сработавшего ордера
 
-====mgp_TPPlus====
+{{{{mgp_TPPlus}}}
     увеличение тп от уровня на заданное количество пунктов.
 -----
+
 === Настройки стоплосса ===
-====mgp_needSLToAll====
+
+{{{mgp_needSLToAll}}}
     _*true/false*_ - выставлять сл на всю сетку от последнего ордера или отдельно на каждый ордер
 
-====mgp_SL====
+{{{mgp_SL}}}
     зависит от [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302520136&updated=Settings_EA_ALL#mgp_needSLToAll mgp_needSLToAll] размерность: пункты
 
-====mgp_SLPlus====
+{{{mgp_SLPlus}}}
     Увеличение сл в зависимости от уровня текущей сетки
 -----
+
 === Настройка использования лим. сетки ===
 
-====mgp_useLimOrders====
+{{{mgp_useLimOrders}}}
     _*true/false*_ - разрешает советнику использовать лимитную сетку
 
-====mgp_LimLevels====
+{{{mgp_LimLevels}}}
     количество уровней лимитной сетки, включая родительский ордер
 -----
+
 === Настройка усреднения ===
 
-====mgp_plusVol====
+{{{mgp_plusVol}}}
     увеличение объема след. уровня на величину _mgp_plusVol_ (+)
 
-====mgp_multiplyVol====
+{{{mgp_multiplyVol}}}
     увеличение объема след. уровня в _mgp_multiplyVol_ раз   ('*')
 -----
 
@@ -62,8 +66,8 @@
 После срабатывания, добавочный лимитный ордер ведет себя как родительский ордер сетки *1-го* уровня 
 _*Соглашение:* сетка для добавочного ордера расчитывается из настроек *настроек лимитной сетки*_ 
 
-===add_useAddLimit===
-    _*true/false*_ - разрешает советнику выставлять добавочный лимитный ордер как родительский
+{{{add_useAddLimit = _*true/false*_}}}
+    - разрешает советнику выставлять добавочный лимитный ордер как родительский
 
 ====add_LimitLevel====
     уровень сетки, от которого будет произведен расчет цены добавочного ордера
