Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -1,111 +1,67 @@
 #labels Settings
 <wiki:toc max_depth="7" />
-
+----
 =Базовые настройки=
 
-{{{TWICE_LOT}}}
-    Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
+  * {{{TWICE_LOT}}} - Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
+  * {{{MN}}} - Магик с которым будет работать советник. чужие магики обрабатываться не будут 
 
-{{{MN}}}
-    магик с которым будет работать советник. чужие магики обрабатываться не будут 
+  ==Настройки лимитной сетки==
+  <b>M</b>ain <b>G</b>rid <b>P</b>roperties (_mgp_) - настройки основной сетки
+  Основная сетка - это сетка <i>1-го</i> уровня. Cетка строится от <i>родительского ордера</i> выставленного вручную или открытого советником по одной из встроенных стратегий. Сетки, построенные от *стоповых ордеров* являются <font color="blue"><i>дочерними</i></font> и имеют <i>уровень 2 и больше</i>
 
-==Настройки лимитной сетки==
-*M* ain *G* rid *P* roperties - настройки основной сетки
-Основная сетка - это сетка *1-го* уровня. Она (сетка) строится от *родительского ордера* выставленного вручную или открытого советником по одной из встроенных стратегий. Сетки, построенные от *стоповых ордеров* являются *дочерними* и имеют *уровень 2 и >*
+    ===Настройки таргета===
 
-===Настройки таргета===
-
-{{{mgp_Target}}}
-    Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
- 
-{{{mgp_TargetPlus}}}
-    увеличение [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302519212&updated=Settings_EA_ALL#mgp_Target таргета] в зависимости от уровня на [mgp_TargetPlus] пунктов
+  * {{{mgp_Target}}} - Фиксированное значение таргета (отменяется использованием useAVG_H1 или useAVG_D)
+  * {{{mgp_TargetPlus}}} - увеличение <b>таргета</b> в зависимости от уровня на {{{mgp_TargetPlus}}} пунктов
 -----
-=== Настройки тейкпрофита ===
-{{{mgp_TP_on_first}}} 
-    кол. пунктов для выставления тп на родительский ордер, когда нет сработавших дочерних ордеров
-
-{{{mgp_TP}}} 
-    кол. пунктов для выставления тп на сработавшие ордера сетки. расчет от последнего сработавшего ордера
-
-{{{mgp_TPPlus}}}
-    увеличение тп от уровня на заданное количество пунктов.
+    === Настройки тейкпрофита ===
+  * {{{mgp_TP_on_first}}} - кол. пунктов для выставления тп на родительский ордер, когда нет сработавших дочерних ордеров
+  * {{{mgp_TP}}} - кол. пунктов для выставления тп на сработавшие ордера сетки. расчет от последнего сработавшего ордера
+  * {{{mgp_TPPlus}}} - увеличение тп от уровня на заданное количество пунктов.
 -----
 
-=== Настройки стоплосса ===
+    === Настройки стоплосса ===
 
-{{{mgp_needSLToAll}}}
-    _*true/false*_ - выставлять сл на всю сетку от последнего ордера или отдельно на каждый ордер
-
-{{{mgp_SL}}}
-    зависит от [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302520136&updated=Settings_EA_ALL#mgp_needSLToAll mgp_needSLToAll] размерность: пункты
-
-{{{mgp_SLPlus}}}
-    Увеличение сл в зависимости от уровня текущей сетки
+  * {{{mgp_needSLToAll}}} - <b><i>true/false</i></b> - выставлять сл на всю сетку от последнего ордера или отдельно на каждый ордер
+    * {{{mgp_SL}}} - зависит от {{{mgp_needSLToAll}}} размерность: <i>пункты</i>
+    * {{{mgp_SLPlus}}} - Увеличение сл в зависимости от уровня текущей сетки
 -----
 
-=== Настройка использования лим. сетки ===
+    === Настройка использования лим. сетки ===
 
-{{{mgp_useLimOrders = }}}_*true/false*_
-    - разрешает советнику использовать лимитную сетку
-
-{{{mgp_LimLevels}}}
-    количество уровней лимитной сетки, включая родительский ордер
+  * {{{mgp_useLimOrders = }}}<i><b>true/false</b></i> - разрешает советнику использовать лимитную сетку
+    * {{{mgp_LimLevels}}} - количество уровней лимитной сетки, включая родительский ордер
 -----
 
-=== Настройка усреднения ===
+    === Настройка усреднения ===
 
-{{{mgp_plusVol}}}
-    увеличение объема след. уровня на величину _mgp_plusVol_ (+)
-
-{{{mgp_multiplyVol}}}
-    увеличение объема след. уровня в _mgp_multiplyVol_ раз   ('*')
+  * {{{mgp_plusVol}}} - увеличение объема след. уровня на величину {{{mgp_plusVol (+)}}}
+  * {{{mgp_multiplyVol}}} - увеличение объема след. уровня в {{{mgp_multiplyVol}}} раз   {{{(*)}}}
 -----
 
-== Настройка добавочного лимитного ордера ==
-После срабатывания, добавочный лимитный ордер ведет себя как родительский ордер сетки *1-го* уровня 
+  == Настройка добавочного лимитного ордера ==
+  После срабатывания, добавочный лимитный ордер ведет себя как родительский ордер сетки *1-го* уровня 
 
-_*Соглашение:* сетка для добавочного ордера расчитывается из настроек *настроек лимитной сетки*_ 
+  _*Соглашение:* сетка для добавочного ордера расчитывается из настроек *настроек лимитной сетки*_ 
 
-    #{{{add_useAddLimit = }}}_*true/false*_
-    - разрешает советнику выставлять добавочный лимитный ордер как родительский
-
-        #{{{add_LimitLevel}}}
-        уровень сетки, от которого будет произведен расчет цены добавочного ордера
-
-        #{{{add_Limit_Pip}}}
-        сколько пунктов от уровня будет выставлен добавочный ордер
-
-        #{{{add_Limit_useLevelVol = }}}_*true/false*_ 
-        - разрешает советнику использовать настройку _add_Limit_multiplyVol_ иначе будет использоваться _add_Limit_fixVol_
-
-            #{{{add_Limit_multiplyVol}}}
-            коэф. умножения объема уровня add_LimitLevel основной сетки лимитных ордеров
-  
-            #{{{add_Limit_fixVol}}}
-            фиксированный объем добавочного ордера
+    * {{{add_useAddLimit}}} = <i><b>true/false</b></i> - разрешает советнику выставлять добавочный лимитный ордер как родительский
+        * {{{add_LimitLevel}}} - уровень сетки, от которого будет произведен расчет цены добавочного ордера
+        * {{{add_Limit_Pip}}} - сколько пунктов от уровня будет выставлен добавочный ордер
+        * {{{add_Limit_useLevelVol = }}}<b><i>true/false</i></b> - разрешает советнику использовать настройку {{{add_Limit_multiplyVol}}} иначе будет использоваться {{{add_Limit_fixVol}}}
+            * {{{add_Limit_multiplyVol}}} - коэф. умножения объема уровня {{{add_LimitLevel}}} основной сетки лимитных ордеров  
+            * {{{add_Limit_fixVol}}} - фиксированный объем добавочного ордера
 -----
 
-== Настройка добавочного стопового ордера ==
+  == Настройка добавочного стопового ордера ==
 
-После срабатывания, добавочный стоповый ордер ведет себя как родительский ордер сетки *1-го* уровня 
+  После срабатывания, добавочный стоповый ордер ведет себя как родительский ордер сетки *1-го* уровня 
 
-_*Соглашение:* сетка для добавочного ордера расчитывается из *настроек лимитной сетки*_ 
+  _*Соглашение:* сетка для добавочного ордера расчитывается из *настроек лимитной сетки*_ 
 
-{{{add_useAddStop = }}}_*true/false*_ 
-    - разрешает советнику выставлять добавочный стоповый ордер как родительский
-  
-{{{add_StopLevel}}}
-    уровень сетки, от которого будет произведен расчет цены добавочного ордера. Родительский ордер находится на 1-м уровне 
-    
-{{{add_Stop_Pip}}}
-    сколько пунктов от уровня будет выставлен добавочный ордер
-    
-{{{add_Stop_useLevelVol = }}}_*true/false*_ 
-    - разрешает советнику использовать настройку _add_Stop_multiplyVol_ иначе будет использоваться _add_Stop_fixVol_
-
-{{{add_Stop_multiplyVol}}}
-    коэф. умножения объема уровня _add_StopLevel_ основной сетки лимитных ордеров
-    
-{{{add_Stop_fixVol}}}
-    фиксированный объем добавочного ордера             
+  * {{{add_useAddStop = }}}<b><i>true/false</i></b> - разрешает советнику выставлять добавочный стоповый ордер как родительский
+    * {{{add_StopLevel}}} - уровень сетки, от которого будет произведен расчет цены добавочного ордера. Родительский ордер находится на 1-м уровне 
+    * {{{add_Stop_Pip}}} - сколько пунктов от уровня будет выставлен добавочный ордер
+    * {{{add_Stop_useLevelVol = }}}<b><i>true/false</i></b> - разрешает советнику использовать настройку {{{add_Stop_multiplyVol}}} иначе будет использоваться {{{add_Stop_fixVol}}}
+        * {{{add_Stop_multiplyVol}}} - коэф. умножения объема уровня {{{add_StopLevel}}} основной сетки лимитных ордеров 
+        * {{{add_Stop_fixVol}}} - фиксированный объем добавочного ордера             
