Edited wiki page Sidebar through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -1,1 +1,11 @@
 #summary Sidebar navigation.
+
+    * Базовые настройки
+          * Настройки лимитной сетки
+                * Настройки таргета
+                * Настройки тейкпрофита
+                * Настройки стоплосса
+                * Настройка использования лим. сетки
+                * Настройка усреднения
+          * Настройка добавочного лимитного ордера
+          * Настройка добавочного стопового ордера
