--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -1,11 +1,11 @@
 #summary Sidebar navigation.
 
-    * Базовые настройки
-          * Настройки лимитной сетки
-                * Настройки таргета
-                * Настройки тейкпрофита
-                * Настройки стоплосса
-                * Настройка использования лим. сетки
-                * Настройка усреднения
-          * Настройка добавочного лимитного ордера
-          * Настройка добавочного стопового ордера
+    * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%91%D0%B0%D0%B7%D0%BE%D0%B2%D1%8B%D0%B5_%D0%BD%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8 Базовые настройки]
+          * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D0%BB%D0%B8%D0%BC%D0%B8%D1%82%D0%BD%D0%BE%D0%B9_%D1%81%D0%B5%D1%82%D0%BA%D0%B8 Настройки лимитной сетки]
+                * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D1%82%D0%B0%D1%80%D0%B3%D0%B5%D1%82%D0%B0 Настройки таргета]
+                * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D1%82%D0%B5%D0%B9%D0%BA%D0%BF%D1%80%D0%BE%D1%84%D0%B8%D1%82%D0%B0 Настройки тейкпрофита]
+                * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D1%81%D1%82%D0%BE%D0%BF%D0%BB%D0%BE%D1%81%D1%81%D0%B0 Настройки стоплосса]
+                * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0_%D0%B8%D1%81%D0%BF%D0%BE%D0%BB%D1%8C%D0%B7%D0%BE%D0%B2%D0%B0%D0%BD%D0%B8%D1%8F_%D0%BB%D0%B8%D0%BC._%D1%81%D0%B5%D1%82%D0%BA%D0%B8 Настройка использования лим. сетки]
+                * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0_%D1%83%D1%81%D1%80%D0%B5%D0%B4%D0%BD%D0%B5%D0%BD%D0%B8%D1%8F Настройка усреднения]
+          * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0_%D0%B4%D0%BE%D0%B1%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%BE%D0%B3%D0%BE_%D0%BB%D0%B8%D0%BC%D0%B8%D1%82%D0%BD%D0%BE%D0%B3%D0%BE_%D0%BE%EF%BF%BD Настройка добавочного лимитного ордера]
+          * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0_%D0%B4%D0%BE%D0%B1%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%BE%D0%B3%D0%BE_%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%B2%D0%BE%D0%B3%D0%BE_%D0%BE%EF%BF%BD Настройка добавочного стопового ордера]
