Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -62,4 +62,9 @@
     * {{{add_Stop_Pip}}} - сколько пунктов от уровня будет выставлен добавочный ордер
     * {{{add_Stop_useLevelVol = }}}<b><i>true/false</i></b> - разрешает советнику использовать настройку {{{add_Stop_multiplyVol}}} иначе будет использоваться {{{add_Stop_fixVol}}}
         * {{{add_Stop_multiplyVol}}} - коэф. умножения объема уровня {{{add_StopLevel}}} основной сетки лимитных ордеров 
-        * {{{add_Stop_fixVol}}} - фиксированный объем добавочного ордера             
+        * {{{add_Stop_fixVol}}} - фиксированный объем добавочного ордера
+
+= Стоповые ордера и дочерние сетки=
+
+== Настройка стоповых ордеров ==
+             
