Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -63,8 +63,14 @@
     * {{{add_Stop_useLevelVol = }}}<b><i>true/false</i></b> - разрешает советнику использовать настройку {{{add_Stop_multiplyVol}}} иначе будет использоваться {{{add_Stop_fixVol}}}
         * {{{add_Stop_multiplyVol}}} - коэф. умножения объема уровня {{{add_StopLevel}}} основной сетки лимитных ордеров 
         * {{{add_Stop_fixVol}}} - фиксированный объем добавочного ордера
-
+-----
 = Стоповые ордера и дочерние сетки=
 
 == Настройка стоповых ордеров ==
+
+  * {{{SO_useStopLevels = }}} <b><i>true/false</i></b> - разрешает советнику использовать выставление стоповых ордеров
+    * {{{SO_Levels}}} - <font color="blue">-1</font> - количество уровней совпадает с уровнями лимитных ордеров, либо задает количетво стоповых уровней
+    * {{{SO_StartLevel}}} - уровень, с которого выставляются стоповые ордера для данного родителя. <i>Родительский ордер имеет индекс <b>1</b></i>
+    * {{{SO_useLimLevelVol = }}} <b><i>true/false</i></b> - разрешает использовать объем текущего уровня лимитной сетки для расчета объема стопового ордера
+      * {{{SO_LimLevelVol_Divide}}} - 
              
