--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -72,5 +72,5 @@
     * {{{SO_Levels}}} - <font color="blue">-1</font> - количество уровней совпадает с уровнями лимитных ордеров, либо задает количетво стоповых уровней
     * {{{SO_StartLevel}}} - уровень, с которого выставляются стоповые ордера для данного родителя. <i>Родительский ордер имеет индекс <b>1</b></i>
     * {{{SO_useLimLevelVol = }}} <b><i>true/false</i></b> - разрешает использовать объем текущего уровня лимитной сетки для расчета объема стопового ордера
-      * {{{SO_LimLevelVol_Divide}}} - 
+      * {{{SO_LimLevelVol_Divide}}} - деление объема лим. ордера для вычисления объема стоп. до уровня {{{LevelVolParent}}}
              
