Edited wiki page Terminology through web user interface.

--- a/wiki/Terminology.wiki
+++ b/wiki/Terminology.wiki
@@ -1,16 +1,19 @@
 #summary One-sentence summary of this page.
 #labels Terminology
+<wiki:toc maxdepth="7">
 
-= Introduction =
+= Введение =
 
-Add your content here.
+= Используемая терминология =
+
+<b>Родительский ордер</b> - ордер, который является базовым для выставления усредняющей сетки. Может быть отдером выставленным вручную "с рынка", пркрывающим разворотным стоповым ордером, либо добавочным ордером.
+
+<b>Уровень</b> - ордер либо группа ордеров, относящихся к одному родительскому ордеру и выставленные на одном расстоянии от него (родительского ордера). <i>Уровень</i> характеризуется расстоянием в пунктах от родительского ордера, тейкпрофитом, стоплоссом и общим объемом.
+
+<b>Сетка</b> - ордера, выставленные в определенном порядке, согласно настройкам советника. В основном используется для прикрытия открытого ордера. <i>Сетка</i> характеризуется количеством <i>уровней</i> и <i>порядком</i>.
+
+<b>Порядок</b> (или <i>порядок сетки</i>) - сколько разворотных стоповых ордеров сработало.
+
+<b>Сработавший ордер</b> - это состояние ордера, когда он из отложенного переходит в рыночный.
 
 
-= Details =
-
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
-
-сюда будешь писать _*терминология*_
