Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -1,4 +1,6 @@
 #labels Settings
+<wiki:toc depth="7">
+
 =Базовые настройки=
 
   * {{{TWICE_LOT}}} - Значение макс. объема, после которого советник будет разбивать объем выставляемого ордера на равные части.
