Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -41,7 +41,7 @@
 -----
 
   == Настройка добавочного лимитного ордера ==
-  После срабатывания, добавочный лимитный ордер ведет себя как родительский ордер сетки *1-го* уровня 
+  После срабатывания, добавочный лимитный ордер ведет себя как родительский ордер сетки *1-го* [Terminology порядка] 
 
   _*Соглашение:* сетка для добавочного ордера расчитывается из настроек *настроек лимитной сетки*_ 
 
@@ -55,7 +55,7 @@
 
   == Настройка добавочного стопового ордера ==
 
-  После срабатывания, добавочный стоповый ордер ведет себя как родительский ордер сетки *1-го* уровня 
+  После срабатывания, добавочный стоповый ордер ведет себя как родительский ордер сетки *1-го* [Terminology порядка]  
 
   _*Соглашение:* сетка для добавочного ордера расчитывается из *настроек лимитной сетки*_ 
 
