--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -1,14 +1,20 @@
 #summary One-sentence summary of this page.
 #labels Phase-Implementation
 
-= Introduction =
+=История изменений=
 
-Add your content here.
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_107_0423_20.exe&can=2&q=#makechanges 1.0.7 0423_20]
 
+  * - Исправлен расчет ТП для открытых уровней сетки
 
-= Details =
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_106_0419_23.exe&can=2&q=#makechanges 1.0.6 0419_22]
 
-Add your content here.  Format your content with:
-  * Text in *bold* or _italic_
-  * Headings, paragraphs, and lists
-  * Automatic links to other wiki pages
+  * - Ошибка компиляции
+
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_106_0419_10.exe&can=2&q=#makechanges 1.0.6 0419_10] 
+  * <b>12,13</b> - ошибка выставления добавочных ордеров.
+
+  * <b>14</b>    - добавлена настройка <i>[http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0_%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%B2%D1%8B%D1%85_%D0%BE%D1%80%D0%B4%D0%B5%D1%80%D0%BE%D0%B2 SO_TP_on_first]</i>
+
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_106_0412_22.exe&can=2&q=#makechanges 1.0.6 0411_22]
+  * <b>9</b> - Добавлен <i>[http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1302878444&updated=Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B0_%D0%B4%D0%BE%D0%B1%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%BE%D0%B3%D0%BE_%D1%81%D1%82%D0%BE%D0%BF%D0%BE%D0%B2%D0%BE%D0%B3%D0%BE_%D0%BE%EF%BF%BD Добавочный стоповый ордер]</i>
