--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -3,6 +3,8 @@
 
 =История изменений=
 
+Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_107_0423_20.exe&can=2&q=#makechanges 1.0.7 0423_20]
 
   * - Исправлен расчет ТП для открытых уровней сетки
