Edited wiki page Terminology through web user interface.

--- a/wiki/Terminology.wiki
+++ b/wiki/Terminology.wiki
@@ -16,4 +16,4 @@
 
 <b>Сработавший ордер</b> - это состояние ордера, когда он из отложенного переходит в рыночный.
 
-
+<b>Открытый уровень</b><i>(открытый уровень сетки)</i> - уровень сетки, которому принадлежит хоть один сработавший ордер.
