Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -74,5 +74,8 @@
     * {{{SO_Levels}}} - <font color="blue">-1</font> - количество уровней совпадает с уровнями лимитных ордеров, либо задает количетво стоповых уровней
     * {{{SO_StartLevel}}} - уровень, с которого выставляются стоповые ордера для данного родителя. <i>Родительский ордер имеет индекс <b>1</b></i>
     * {{{SO_useLimLevelVol = }}} <b><i>true/false</i></b> - разрешает использовать объем текущего уровня лимитной сетки для расчета объема стопового ордера
-      * {{{SO_LimLevelVol_Divide}}} - деление объема лим. ордера для вычисления объема стоп. до уровня {{{LevelVolParent}}}
+      * {{{SO_LimLevelVol_Divide}}} - деление объема лим. ордера для вычисления объема стоп. до уровня {{{LevelVolParent}}}. При <b>-1</b>  выставляется объемом родительского
+    * {{{SO_EndLevel}}} - Настройки {{{SO_useLimLevelVol}}} и {{{SO_LimLevelVol_Divide}}} будут использоваться до этого уровня включительно
+    * {{{SO_ContinueLevel}}} - Включая этот уровень и до {{{SO_Levels}}} будут продолжать выставляться стоповые ордера.
+      * {{{SO_ContLevelVol_Divide}}} - Для расчета объема используется значение объема текущего лимитного уровня.
              
