Edited wiki page Settings_EA_ALL through web user interface.

--- a/wiki/Settings_EA_ALL.wiki
+++ b/wiki/Settings_EA_ALL.wiki
@@ -78,4 +78,13 @@
     * {{{SO_EndLevel}}} - Настройки {{{SO_useLimLevelVol}}} и {{{SO_LimLevelVol_Divide}}} будут использоваться до этого уровня включительно
     * {{{SO_ContinueLevel}}} - Включая этот уровень и до {{{SO_Levels}}} будут продолжать выставляться стоповые ордера.
       * {{{SO_ContLevelVol_Divide}}} - Для расчета объема используется значение объема текущего лимитного уровня.
+
+== Настройки дочерних сеток ==
+
+  * {{{SO_useKoefProp}}} <i><b>true/false</b></i> - разрешает советнику использовать настройки таргета, тп и сл для дочерних сеток в качестве коэф. умножения применительно к настройкам сетки-родителя.
+    * {{{SO_Target}}} - в зависимости от {{{SO_useKoefProp}}} будет принимать значение <i>таргета пред. сетки</i> {{{* SO_Target}}}, либо <i>фикс</i> значение в пунктах, приведенное к целому числу, для любой дочерней сетки.
+    * {{{SO_TP}}} - описание аналогично пред. настройке
+    * {{{SO_TP_on_first}}} - описание аналогично пред. настройке, только с запаздыванием на один <i>порядок</i>
+    * {{{SO_SL}}} - описание аналогично пред. настройке
+    
              
