--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,9 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0511_12.exe&can=2&q=#makechanges 1.0.9 0511_12]
+  * Добавлено простое закрытие по ГроуЭквити
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_108_0428_12.exe&can=2&q=#makechanges 1.0.8 4128_12]
 
   * <b>20</b>, <b>22</b> - добавлен контроль по выставленным объемам уровня.
