--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -1,5 +1,6 @@
 #summary Sidebar navigation.
 
+  * [Settings_ALL Настройки советника]
     * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%91%D0%B0%D0%B7%D0%BE%D0%B2%D1%8B%D0%B5_%D0%BD%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8 Базовые настройки]
           * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D0%BB%D0%B8%D0%BC%D0%B8%D1%82%D0%BD%D0%BE%D0%B9_%D1%81%D0%B5%D1%82%D0%BA%D0%B8 Настройки лимитной сетки]
                   * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D1%82%D0%B0%D1%80%D0%B3%D0%B5%D1%82%D0%B0 Настройки таргета]
