Edited wiki page Sidebar through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -15,3 +15,4 @@
           * [http://code.google.com/p/mql-elt/wiki/Settings_EA_ALL?ts=1303890002&updated=Settings_EA_ALL#%D0%9D%D0%B0%D1%81%D1%82%D1%80%D0%BE%D0%B9%D0%BA%D0%B8_%D0%B4%D0%BE%D1%87%D0%B5%D1%80%D0%BD%D0%B8%D1%85_%D1%81%D0%B5%D1%82%D0%BE%D0%BA Настройки дочерних сеток]
 
   * [Terminology Терминология]
+    * [http://code.google.com/p/mql-elt/wiki/Terminology#%D0%92%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5 Введение]
