--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,9 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0605_12.exe&can=2&q=#makechanges 1.0.9 0605_12] 
+  * <b>32</b> - Добавлено автооткрытие по барам.
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0526_09.exe&can=2&q=#makechanges 1.0.9 0526_09]
   * <b>28</b> - Исправлен баг с удалением отложенников, выставленных вручную, при МН = 0.
 
