--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,9 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0609_09.exe&can=2&q=#makechanges 1.0.9 0609_09]
+  * <b>33</b> - Изменения связанные с этим багфиксом
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0605_12.exe&can=2&q=#makechanges 1.0.9 0605_12] 
   * <b>32</b> - Добавлено автооткрытие по барам.
 
