Edited wiki page Install through web user interface.

--- a/wiki/Install.wiki
+++ b/wiki/Install.wiki
@@ -1,4 +1,4 @@
--Введение-
+=Введение=
 Комплекс предназначен организации сопровождения открытой позиции сеточными алгоритмами, построенными на использовании лимитных и стоповых ордеров.
 
 ==Подробно==
