Edited wiki page Sidebar through web user interface.

--- a/wiki/Sidebar.wiki
+++ b/wiki/Sidebar.wiki
@@ -18,3 +18,5 @@
     * [http://code.google.com/p/mql-elt/wiki/Terminology#%D0%92%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5 Введение]
 
   * [History История изменений]
+
+  * [Install Инсталяция]
