Edited wiki page History through web user interface.

--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,13 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+[http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0704_12.exe&can=2&q=#makechanges 1.0.9 0704_12]
+  * <b>37</b> 
+    * - Исправлено ошибочное удаление отложенных ордеров выставленных вручную. (<i>желателен комментарий</i> <b>"@ip1"</b>)
+    * - Добавлена возможность исключить ордер из обработки советником.
+Для этого используется <b>"@exp_off"</b> в комментарии ордера. <i>Требуется проверка</i>
+  
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0627_23.exe&can=2&q=#makechanges 1.0.9 0627_23]
   * - Добавлен метод открытия родителя для лимитной сетки. 
 
