Edited wiki page History through web user interface.

--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,12 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+[http://code.google.com/p/mql-elt/downloads/detail?name=eLT_111_0119_12.exe&can=2&q=#makechanges 1.1.1 0119_12]
+
+    * - Подключен модуль расчета автолота
+<i>Требуется проверка</i>
+
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=Setup_eLT_109_0704_15.exe&can=2&q=#makechanges 1.0.9 0704_15]
   * <b>37</b> 
     * - Исправлено ошибочное удаление отложенных ордеров выставленных вручную. (<i>желателен комментарий</i> <b>"@ip1"</b>)
