--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,9 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+[http://code.google.com/p/mql-elt/downloads/detail?name=eLT_201_0202_15.exe&can=2&q=#makechanges 2.0.1 0202_15]
+    * - Перешли на версию 2.0 <i>предыдущие версии не поддерживаются</i>
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=eLT_111_0119_12.exe&can=2&q=#makechanges 1.1.1 0119_12]
 
     * - Подключен модуль расчета автолота
