--- a/wiki/EA_Settings_En.wiki
+++ b/wiki/EA_Settings_En.wiki
@@ -1,26 +1,27 @@
-#summary Settings of EA eLT.
+<wiki:toc depth="7">
 
-Basic settings
-TWICE_LOT - The value of max. volume, after which the adviser will split the amount of orders put up in equal parts.
-MN - Magick which will work advisor. others magick will not be processed
-Grid Settings Limit Main Grid Properties (mgp) - setting up a basic grid main grid - a grid of level 1. Netting is constructed from a parent orders billed manually, or open an adviser to one of the built-in strategies. Nets constructed from the stop orders are subsidiaries and have a level 2 or more
-Setting target with
-mgp_Target - Fixed value target with (or is canceled using useAVG_H1 useAVG_D)
-mgp_TargetPlus - target with an increase depending on the level on points mgp_TargetPlus
-Settings TakeProfit
-mgp_TP_on_first - count. items to be placed on the parent order m, when the child is not triggered orders
-mgp_TP - count. items to be placed on the work warrants m grid. calculated on the last warrants triggered
-mgp_TPPlus - m increase in the level of a specified number of points.
-Settings stoploss
-mgp_needSLToAll - true / false - display words by the whole grid on the last warrants or separately for each order
-mgp_SL - depends on the dimension of mgp_needSLToAll: items
-mgp_SLPlus - Increase cl depending on the current grid
-Setting up of lymph. Grid
-mgp_useLimOrders = true / false - enables an adviser to limit use of the grid
-mgp_LimLevels - Limit the number of levels of the grid, including the parent of a warrant
-Setting the averaging
-mgp_plusVol - an increase of the trace. level by an amount mgp_plusVol (+)
-mgp_multiplyVol - an increase of the trace. level mgp_multiplyVol times (*)
+= Basic settings =
+  TWICE_LOT - The value of max. volume, after which the adviser will split the amount of orders put up in equal parts.
+  MN - Magick which will work advisor. others magick will not be processed
+  == Grid Settings Limit ==
+    * Main Grid Properties (mgp) - setting up a basic grid main grid - a grid of level 1. Netting is constructed from a parent orders billed manually, or open an adviser to one of the built-in strategies. Nets constructed from the stop orders are subsidiaries and have a level 2 or more
+  === Setting target with ===
+    * mgp_Target - Fixed value target with (or is canceled using useAVG_H1 useAVG_D)
+    * mgp_TargetPlus - target with an increase depending on the level on points mgp_TargetPlus
+  ==== Settings TakeProfit ====
+    * mgp_TP_on_first - count. items to be placed on the parent order m, when the child is not triggered orders
+    * mgp_TP - count. items to be placed on the work warrants m grid. calculated on the last warrants triggered
+    * mgp_TPPlus - m increase in the level of a specified number of points.
+  ==== Settings stoploss ====
+    * mgp_needSLToAll - true / false - display words by the whole grid on the last warrants or separately for each order
+    * mgp_SL - depends on the dimension of mgp_needSLToAll: items
+    * mgp_SLPlus - Increase cl depending on the current grid
+  ==== Setting Limmit Grid ====
+    * mgp_useLimOrders = true / false - enables an adviser to limit use of the grid
+    * mgp_LimLevels - Limit the number of levels of the grid, including the parent of a warrant
+  ==== Setting the averaging ====
+    * mgp_plusVol - an increase of the trace. level by an amount mgp_plusVol (+)
+    * mgp_multiplyVol - an increase of the trace. level mgp_multiplyVol times (*)
 Setting up an additional limit order after operation, an additional limit order is an order to be a parent of a grid of the second order agreement: a grid for an additional warrant is calculated from the grid configuration settings Limit
 add_useAddLimit = true / false - enables an adviser to put an additional limit order as a parent
 add_LimitLevel - the level of the grid on which the price will be calculated incremental order
