Edited wiki page History through web user interface.

--- a/wiki/History.wiki
+++ b/wiki/History.wiki
@@ -5,6 +5,11 @@
 
 Под ссылкой на скачивание <b>жирным</b> шрифтом указывается номер issue который выполнен в этом релизе
 
+    * - Прошло много изменений. 
+        * + Закрытие по фикс. прибыли.
+        * = Исправлен механизм закрытия по проценту
+        * + Блок открытия по Червяку  
+
 [http://code.google.com/p/mql-elt/downloads/detail?name=eLT_201_0202_15.exe&can=2&q=#makechanges 2.0.1 0202_15]
     * - Перешли на версию 2.0 <i>предыдущие версии не поддерживаются</i>
 
